fixed mobile nav menu having wrong background-color

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -166,6 +166,12 @@ body.dark-mode {
     color: $dark-grey-color-dark;
   }
 
+  .site-nav {
+    @include media-query($on-palm) {
+      background-color: $dark-background-color;
+    }
+  }
+
   a {
     color: lighten($brand-color, 5%)
   }
